--- a/test.html
+++ b/test.html
@@ -45,22 +45,36 @@
         font-size: 25px;
         text-align: center;
     }
+    .fs10{
+        font-size: 10px;
+    }
+    .mtjm{
+        width: 70px;display: inline-block;
+    }
     </style>
 </head>
 <body>
 <div class='container'>
     <table>
+        <tr class='title'><td colspan="4">月度统计</td></tr>
+        <tr align='center'><td>月份</td><td>日常消费</td><td>专项消费</td><td>总计</td></tr>
         <tr>
             <td><a href='#2019.7'>2019.7</a></td>
             <td align='right'>8218.0</td>
+            <td align='right'>8218.0</td>
+            <td align='right'>18218.0</td>
         </tr>
         <tr>
             <td><a href='#2019.6'>2019.6</a></td>
-            <td align='right'>5734.0</td>
+            <td align='right'>8218.0</td>
+            <td align='right'>8218.0</td>
+            <td align='right'>18218.0</td>
         </tr>
         <tr>
             <td><a href='#2019.5'>2019.5</a></td>
-            <td align='right'>12898.0</td>
+            <td align='right'>8218.0</td>
+            <td align='right'>8218.0</td>
+            <td align='right'>18218.0</td>
         </tr>
     </table>
 
